fix seach input/btn alignment & added media Query 📐

--- a/src/components/Nav/searchbar/SearchBar.css
+++ b/src/components/Nav/searchbar/SearchBar.css
@@ -59,7 +59,7 @@
 .search-btn {
   color: white;
   border: solid black 1px;
-  height: 55px;
+  height: 52px;
   width: 100px;
   border-radius: 2px;
   background-color: black;
@@ -67,39 +67,51 @@
   right: 20px;
 }
 
+form  {
+ display:flex;
+ align-items:center;
+}
+
 .search-btn:hover {
   background-color: gray !important;
 }
 
 /* -------- MEDIA QUERIES (MEDIUM DEVICES) --------------*/
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 991px) and (max-width: 1024px) {
+    form  {
+ display:flex;
+ align-items:center;
+ justify-content: center;
+}
 }
 
 /* -------- MEDIA QUERIES (SMALL DEVICES) --------------*/
 @media screen and (max-width: 555px) {
-  .search-btn {
+
+  /* .search-btn {
     width: 94vw;
-  }
-  #myInput {
+  } */
+  /* #myInput {
     width: 94vw;
      margin: auto; 
-  }
+  } */
 
-  .search-bar {
+  /* .search-bar {
     margin: auto;
     width: 100%;
-  }
-  .search-btn > p {
+  } */
+  /* .search-btn > p {
     display: none;
-  }
+  } */
+
 }
 
 @media screen and (max-width: 503px) {
-  .search-btn {
+  /* .search-btn {
     width: 100vw;
   }
   #myInput {
     width: 100vw;
     left: 5px;
-  }
+  } */
 }
